implement user signup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,12 +28,22 @@
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "Athletes Den", root_path %></li>
           </ul>
-
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Sign Up", new_user_registration_path %></li>
+          </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
   </header>
-
+  <div class="row">
+    <div class="col-md-12">
+      <% flash.each do |key, message| %>
+        <div class="text-center alert alert-<%= key == 'notice' ? 'success' : 'danger' %>">
+          <p><%= message %></p>
+        </div>
+      <% end %>
+    </div>
+  </div>
   <div class="container">
     <%= yield %>
   </div>
