--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,48 +10,16 @@
 
   <body>
   <header role="banner">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <%= link_to "Workout-App", root_path, class: "navbar-brand" %>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "Athletes Den", root_path %></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <% if user_signed_in? %>
-              <li>Welcome <%= "#{current_user.email}" %>!</li>
-              <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-            <% else %>
-              <li><%= link_to "Sign up", new_user_registration_path %></li>
-              <li><%= link_to "Sign in", new_user_session_path %></li>
-            <% end %>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+    <%= render 'shared/header' %>
   </header>
   <div class="row">
-    <div class="col-md-12">
-      <% flash.each do |key, message| %>
-        <div class="text-center alert alert-<%= key == 'notice' ? 'success' : 'danger' %>">
-          <p><%= message %></p>
-        </div>
-      <% end %>
-    </div>
+    <%= render 'shared/error' %>
   </div>
   <div class="container">
     <%= yield %>
   </div>
+  <footer>
+    <%= render 'shared/footer' %>
+  </footer>
   </body>
 </html>
