--- a/app/views/shared/_error.html.erb
+++ b/app/views/shared/_error.html.erb
@@ -1,7 +1,9 @@
-<div class="col-md-12">
-  <% flash.each do |key, message| %>
-    <div class="text-center alert alert-<%= key == 'notice' ? 'success' : 'danger' %>">
-      <p><%= message %></p>
-    </div>
-  <% end %>
+<div class="container">
+  <div class="col-md-8 col-md-offset-2">
+    <% flash.each do |key, message| %>
+      <div class="text-center alert alert-<%= key == 'notice' ? 'success' : 'danger' %>">
+        <p><%= message %></p>
+      </div>
+    <% end %>
+  </div>
 </div>
