--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,8 +18,12 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li>Welcome <%= "#{current_user.email}" %>!</li>
           <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+          <div class="navbar-right signed-in-user">
+            <p class="navbar-text">
+              Signed in as <%= "#{current_user.email}" %>
+            </p>
+          </div>
         <% else %>
           <li><%= link_to "Sign up", new_user_registration_path %></li>
           <li><%= link_to "Sign in", new_user_session_path %></li>
